...
                    <Text>
                        {isOnline
                            ? STRINGS.driverDashboard.online
                            : STRINGS.driverDashboard.offline}
                    </Text>
                    <Switch
                        testID="driver-online-switch"
                        value={isOnline}
                        onValueChange={setIsOnline}
                    />
                </View>
            </View>

...
